# drug-interaction-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
agent/: app.py  instrumentation.py  main.py  phoenix_client.py  run_experiment.py
agent/drug_interaction_agent/: agent.py  models.py  prompts.py  tools.py
